[project]
name = "hashicorp"
version = "0.0.0"
description = "Ansible role to add the hashicorp repository for supported distributions."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["hashicorp", "repository"]
repository = "https://github.com/jomrr/ansible-role-hashicorp"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
